--- a/gradoop-store/gradoop-hbase/pom.xml
+++ b/gradoop-store/gradoop-hbase/pom.xml
@@ -144,6 +144,11 @@
             <artifactId>hbase-hadoop-compat</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-hbase_2.11</artifactId>
+        </dependency>
+
         <!-- Others -->
         <dependency>
             <groupId>com.github.s1ck</groupId>
