[#1368] new module gradoop-examples-temporal added * aggregation, difference and snapshot example added * gradoop-temporal added to dependency management

--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -14,6 +14,7 @@
 
     <modules>
         <module>gradoop-examples-operators</module>
+        <module>gradoop-examples-temporal</module>
     </modules>
 
     <name>Gradoop Examples</name>
