--- a/gradoop-checkstyle/pom.xml
+++ b/gradoop-checkstyle/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.gradoop</groupId>
         <artifactId>gradoop-parent</artifactId>
-        <version>0.6.0-SNAPSHOT</version>
+        <version>0.5.1</version>
     </parent>
 
     <artifactId>gradoop-checkstyle</artifactId>
