--- a/gradoop-store/gradoop-store-api/pom.xml
+++ b/gradoop-store/gradoop-store-api/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>gradoop-store</artifactId>
         <groupId>org.gradoop</groupId>
-        <version>0.6.0-SNAPSHOT</version>
+        <version>0.5.1</version>
     </parent>
 
     <artifactId>gradoop-store-api</artifactId>
