--- a/gradoop-temporal/pom.xml
+++ b/gradoop-temporal/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.gradoop</groupId>
         <artifactId>gradoop-parent</artifactId>
-        <version>0.5.1</version>
+        <version>0.6.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>gradoop-temporal</artifactId>
