[#1402] rebased and solved merge conflicts

--- a/gradoop-flink/pom.xml
+++ b/gradoop-flink/pom.xml
@@ -165,6 +165,12 @@
         </dependency>
 
         <!-- Others -->
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
