[#1402] excluded CAPF Operator  (#1403)
fixes #1402

--- a/gradoop-examples/gradoop-examples-operators/pom.xml
+++ b/gradoop-examples/gradoop-examples-operators/pom.xml
@@ -77,23 +77,6 @@
         </profile>
     </profiles>
 
-
-    <dependencies>
-        <dependency>
-            <groupId>org.gradoop</groupId>
-            <artifactId>gradoop-flink</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.gradoop</groupId>
-            <artifactId>gradoop-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.gradoop</groupId>
-            <artifactId>gradoop-data-integration</artifactId>
-        </dependency>
-    </dependencies>
-
-
     <build>
         <plugins>
             <plugin>
@@ -114,7 +97,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <minimizeJar>true</minimizeJar>
+                            <minimizeJar>false</minimizeJar>
                             <artifactSet>
                                 <includes>
                                     <!-- gradoop dependencies -->
@@ -130,16 +113,6 @@
                                     <include>com.google.guava:*</include>
                                     <!-- DIMSpan dependencies -->
                                     <include>me.lemire.integercompression:*</include>
-                                    <!-- capf example dependencies -->
-                                    <include>org.opencypher:*</include>
-                                    <include>org.apache.flink:flink-table_2.11</include>
-                                    <include>org.parboiled:parboiled-scala_2.11</include>
-                                    <include>com.lihaoyi:ujson_2.11</include>
-                                    <include>com.lihaoyi:upickle_2.11</include>
-                                    <include>org.typelevel:cats-kernel_2.11</include>
-                                    <include>org.typelevel:cats-core_2.11</include>
-                                    <include>org.atnos:eff_2.11</include>
-                                    <include>org.parboiled:*</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
@@ -148,4 +121,23 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.gradoop</groupId>
+            <artifactId>gradoop-flink</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.gradoop</groupId>
+            <artifactId>gradoop-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.gradoop</groupId>
+            <artifactId>gradoop-data-integration</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-clients_2.11</artifactId>
+        </dependency>
+    </dependencies>
 </project>
