--- a/gradoop-flink/pom.xml
+++ b/gradoop-flink/pom.xml
@@ -147,17 +147,6 @@
             <artifactId>flink-shaded-hadoop2</artifactId>
 	    </dependency>
 
-        <!-- CAPF -->
-        <dependency>
-            <groupId>org.opencypher</groupId>
-            <artifactId>flink-cypher</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.opencypher</groupId>
-            <artifactId>spark-cypher</artifactId>
-        </dependency>
-
         <!-- Test dependencies -->
 
         <!-- Gradoop -->
@@ -176,6 +165,12 @@
         </dependency>
 
         <!-- Others -->
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
